--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow: auto !important;
+}
+
 body {
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
+  overflow: auto;
 }
